--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -466,6 +466,11 @@ text-transform: uppercase;
 # education
 --------------------------------------------------------------*/
 
+#education{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .education .icon-box {
   text-align: center;
   padding: 70px 20px 80px 20px;
