--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,16 +469,22 @@ text-transform: uppercase;
 #education{
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 30px;
+}
+
+#education .iconbox{
+  padding-left: 30px;
+  padding-right: 30px; 
 }
 
 .education .icon-box {
   text-align: center;
-  padding: 70px 20px 80px 20px;
-  padding-left: 10px;
+  padding: 50px 20px 50px 20px;
   transition: all ease-in-out 0.3s;
-  background: #cdeeff;
-  /* border-radius: 10px; */
-  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+  background: #ffffff;
+  border-radius: 5px;
+  /* box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.10); */
+  box-shadow: 0 5px 5px 0 rgb(233 240 243 / 50%), 0 0 0 1px #e6ecf8;
 }
 
 .education .icon-box h4 {
@@ -592,11 +598,11 @@ text-transform: uppercase;
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #9a88db;
+  border: 1px solid #0f1c4e;
 }
 
 .skills-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #9a88db;
+  background-color: #0f1f5c;
 }
 
 /*--------------------------------------------------------------
@@ -682,6 +688,7 @@ text-transform: uppercase;
   height: auto;
   width: 100%;
   text-align: center;
+  padding-bottom: 30px;
 }
 
 .contact-details {
@@ -698,8 +705,8 @@ text-transform: uppercase;
 .contact-details li span{
   text-align: center;
   padding-left: 20px;
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 18px;
+  
 }
 
 @-webkit-keyframes animate-loading {
